search working, filter so-so

--- a/frontend-react/src/styles/main.css
+++ b/frontend-react/src/styles/main.css
@@ -230,6 +230,7 @@ html {
   color: var(--textC);
   height: 3em;
   background-color: var(--backgroundC);
+  position: relative;
 }
 .titleBar .menuButton {
   border-radius: 0.6em;
@@ -421,4 +422,36 @@ html {
 }
 .errMsgWrapper button {
   cursor: pointer;
+}
+
+.backButtonWrapper {
+  position: relative;
+}
+.backButtonWrapper .backPopup {
+  position: fixed;
+  z-index: 1; /*stay on top*/
+  height: 8em;
+  width: 20em;
+  top: 10em;
+  left: 10em;
+}
+
+.searchField {
+  position: fixed;
+  z-index: 1;
+  max-width: 500px;
+  left: 15em;
+  top: 10em;
+}
+
+.filterField {
+  position: fixed;
+  z-index: 1;
+  max-width: 500px;
+  left: 15em;
+  top: 20em;
+}
+
+.searchFocus {
+  background-color: var(--primaryC);
 }/*# sourceMappingURL=main.css.map */
